[CS] Don't fix an _OptionalNilComparison argument

We should only be attempting such overloads for
nil literal args.

Resolves SR-12426.